@@ -4,7 +4,7 @@
  * Purpose: Process Fidonet style mail and files.
  *
  *****************************************************************************
- * Copyright (C) 1997-2005
+ * Copyright (C) 1997-2007
  *   
  * Michiel Broek		FIDO:		2:280/2802
  * Beekmansbos 10
@@ -286,18 +286,28 @@ void die(int onsig)
     if (tic_imp)
 	CreateSema((char *)"reqindex");
 
-    if (net_in + net_imp + net_out + net_bad + net_msgs)
+    if (net_in + net_imp + net_out + net_bad + net_msgs) {
 	Syslog('+', "Netmail  [%4d] import [%4d] out [%4d] bad [%4d] msgs [%4d]", net_in, net_imp, net_out, net_bad, net_msgs);
-    if (email_in + email_imp + email_out + email_bad)
+	SockS("MSTN:3,%d,%d,%d;", net_in, net_out, net_bad);
+    }
+    if (email_in + email_imp + email_out + email_bad) {
 	Syslog('+', "Email    [%4d] import [%4d] out [%4d] bad [%4d]", email_in, email_imp, email_out, email_bad);
-    if (echo_in + echo_imp + echo_out + echo_bad + echo_dupe)
+	SockS("MSTI:3,%d,%d,%d;", email_imp, email_out, email_bad);
+    }
+    if (echo_in + echo_imp + echo_out + echo_bad + echo_dupe) {
 	Syslog('+', "Echomail [%4d] import [%4d] out [%4d] bad [%4d] dupe [%4d]", echo_in, echo_imp, echo_out, echo_bad, echo_dupe);
-    if (news_in + news_imp + news_out + news_bad + news_dupe)
+	SockS("MSTE:4,%d,%d,%d,%d;", echo_imp, echo_out, echo_bad, echo_dupe);
+    }
+    if (news_in + news_imp + news_out + news_bad + news_dupe) {
 	Syslog('+', "News     [%4d] import [%4d] out [%4d] bad [%4d] dupe [%4d]", news_in, news_imp, news_out, news_bad, news_dupe);
+	SockS("MSTR:4,%d,%d,%d,%d;", news_imp, news_out, news_bad, news_dupe);
+    }
     if (tic_in + tic_imp + tic_out + tic_bad + tic_dup)
 	Syslog('+', "TICfiles [%4d] import [%4d] out [%4d] bad [%4d] dupe [%4d]", tic_in, tic_imp, tic_out, tic_bad, tic_dup);
     if (Magics + Hatched)
 	Syslog('+', "  Magics [%4d]  hatch [%4d]", Magics, Hatched);
+    if (tic_in + tic_imp + tic_out + tic_bad + tic_dup + Magics + Hatched)
+	SockS("MSTF:6,%d,%d,%d,%d,%d,%d;", tic_imp, tic_out, tic_bad, tic_dup, Magics, Hatched);
     if (notify + areamgr + filemgr)
 	Syslog('+', "Notify msgs [%4d] AreaMgr [%4d] FileMgr [%4d]", notify, areamgr, filemgr);
 
